<resources>
    <string name="app_name">Practices</string>
    <string name="blank"> </string>
    <string name="more">···</string>
    <string name="input_clear">C</string>
    <string name="input_percent">%</string>
    <string name="input_delete">D</string>
    <string name="input_divide">÷</string>
    <string name="input_plus">+</string>
    <string name="input_minus">-</string>
    <string name="input_times">×</string>
    <string name="input_point">.</string>
    <string name="input_equal">=</string>
    <string name="input_1">1</string>
    <string name="input_2">2</string>
    <string name="input_3">3</string>
    <string name="input_4">4</string>
    <string name="input_5">5</string>
    <string name="input_6">6</string>
    <string name="input_7">7</string>
    <string name="input_8">8</string>
    <string name="input_9">9</string>
    <string name="input_0">0</string>
    <string name="input_00">00</string>

    <string name="activity_calculator">Calculator</string>
    <string name="activity_kotlin">Kotlin</string>
    <string name="activity_game">Game</string>
    <string name="activity_music">Music</string>
    <string name="activity_sms">短信接收</string>
    <string name="activity_tab_layout">TabLayout</string>
    <string name="activity_web_config">食谱系统</string>

    <string name="game_start">Start</string>
    <string name="game_restart">Restart</string>
    <string name="game_pause">Pause</string>

    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>


    <string name="btn_skin">切换皮肤</string>
    <string name="btn_ok">OK</string>
    <string name="btn_dialog">Dialog</string>
    <string name="toast_title">警告</string>
    <string name="toast_content">请开启悬浮窗权限</string>

    <string name="fragment_home">首页</string>
    <string name="fragment_asset">资产</string>
    <string name="fragment_mine">我的</string>
    <string name="fragment_income">收入</string>
    <string name="fragment_outcome">支出</string>
    <string name="fragment_transfer_account">转账</string>

    <string name="icon_title">记一笔</string>
    <string name="income_suffix">月收入(元)</string>
    <string name="outcome_suffix">月支出(元)</string>

    <!--  支出类别  -->
    <string name="type_eat">餐饮</string>
    <string name="type_traffic">交通</string>
    <string name="type_shopping">购物</string>
    <string name="type_live">居住</string>
    <string name="type_amusement">娱乐</string>
    <string name="type_medical">医疗</string>
    <string name="type_education">教育</string>
    <string name="type_contact">人情</string>
    <string name="type_other">其他</string>
    <string name="type_snack">零食</string>
    <string name="type_supermarket">超市</string>
    <string name="type_vegetable">买菜</string>
    <string name="type_dinner">外出就餐</string>
    <string name="type_fruit">水果</string>
    <string name="type_car">打车</string>
    <string name="type_telephone_bill">话费网费</string>
    <string name="type_parent">孝敬父母</string>

    <!--  收入类别  -->
    <string name="type_salary">工资</string>
    <string name="type_red_packet">红包</string>
    <string name="type_reimbursement">报销</string>
    <string name="type_part_time_job">兼职</string>
    <string name="type_investment_income">投资收益</string>
    <string name="type_other_income">其他收入</string>
    <string name="type_social_security">社保金</string>
    <string name="type_public_reserve_funds">公积金</string>

    <!--  食谱  -->
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_account">账号</string>
    <string name="text_pwd">密码</string>
    <string name="text_captcha">验证码</string>
    <string name="text_captcha_refresh">刷新验证码</string>
    <string name="text_confirm">确认</string>
    <string name="text_cancel">取消</string>
    <string name="text_search">查询</string>
    <string name="text_add">新增</string>
    <string name="text_info">详情</string>
    <string name="text_del">删除</string>
    <string name="text_keyword">关键字</string>
    <string name="text_type">类别</string>
    <string name="text_required">必选食材</string>
    <string name="text_selected">可选食材</string>
    <string name="text_label">标签</string>
    <string name="text_all_match">全部匹配</string>

    <string name="hint_address">请输入IP地址</string>
</resources>