<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MusicActivity">

        <Button
            android:id="@+id/start_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stop_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_service_btn" />

        <Button
            android:id="@+id/bind_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bind_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_service_btn" />

        <Button
            android:id="@+id/unbind_service_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bind_service_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>