<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gary"
        tools:context=".activity.CalculatorActivity">

        <TextView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:padding="10dp"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            android:textSize="36sp"
            android:gravity="end"
            tool:text="@string/app_name"
            android:background="@color/gary"
            app:layout_constraintTop_toBottomOf="@id/btn_more"
            app:layout_constraintBottom_toTopOf="@id/btn_region"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_input_clear"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/teal_200"
                android:text="@string/input_clear"
                android:textSize="36sp"
                android:background="@drawable/input_button_radius"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_input_mod"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_input_mod"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/teal_200"
                android:background="@drawable/input_button_radius"
                android:text="@string/input_mod"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_input_clear" />

            <Button
                android:id="@+id/btn_input_delete"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:text="@string/input_delete"
                android:textSize="36sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_input_divide"
                app:layout_constraintStart_toEndOf="@id/btn_input_mod" />

            <Button
                android:id="@+id/btn_input_divide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                android:text="@string/input_divide"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_input_delete" />

            <Button
                android:id="@+id/btn_input_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/input_1"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_2"
                android:background="@drawable/input_button_radius"
                app:layout_constraintTop_toBottomOf="@id/btn_input_clear"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_input_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:background="@drawable/input_button_radius"
                android:text="@string/input_2"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_3"
                app:layout_constraintTop_toBottomOf="@id/btn_input_clear"
                app:layout_constraintStart_toEndOf="@id/btn_input_1" />

            <Button
                android:id="@+id/btn_input_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/black"
                android:text="@string/input_3"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_times"
                app:layout_constraintTop_toBottomOf="@id/btn_input_clear"
                app:layout_constraintStart_toEndOf="@id/btn_input_2" />

            <Button
                android:id="@+id/btn_input_times"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                android:text="@string/input_times"
                app:layout_constraintTop_toBottomOf="@id/btn_input_clear"
                app:layout_constraintStart_toEndOf="@id/btn_input_3" />

            <Button
                android:id="@+id/btn_input_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/input_4"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_5"
                android:background="@drawable/input_button_radius"
                app:layout_constraintTop_toBottomOf="@id/btn_input_1"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_input_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:background="@drawable/input_button_radius"
                android:text="@string/input_5"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_6"
                app:layout_constraintTop_toBottomOf="@id/btn_input_1"
                app:layout_constraintStart_toEndOf="@id/btn_input_4" />

            <Button
                android:id="@+id/btn_input_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/black"
                android:text="@string/input_6"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_minus"
                app:layout_constraintTop_toBottomOf="@id/btn_input_1"
                app:layout_constraintStart_toEndOf="@id/btn_input_5" />

            <Button
                android:id="@+id/btn_input_minus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/input_minus"
                app:layout_constraintTop_toBottomOf="@id/btn_input_1"
                app:layout_constraintStart_toEndOf="@id/btn_input_6" />

            <Button
                android:id="@+id/btn_input_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/input_7"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_8"
                android:background="@drawable/input_button_radius"
                app:layout_constraintTop_toBottomOf="@id/btn_input_4"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_input_8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:background="@drawable/input_button_radius"
                android:text="@string/input_8"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_9"
                app:layout_constraintTop_toBottomOf="@id/btn_input_4"
                app:layout_constraintStart_toEndOf="@id/btn_input_7" />

            <Button
                android:id="@+id/btn_input_9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/black"
                android:text="@string/input_9"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_plus"
                app:layout_constraintTop_toBottomOf="@id/btn_input_4"
                app:layout_constraintStart_toEndOf="@id/btn_input_8" />

            <Button
                android:id="@+id/btn_input_plus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                android:text="@string/input_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_input_4"
                app:layout_constraintStart_toEndOf="@id/btn_input_9" />

            <Button
                android:id="@+id/btn_input_00"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:text="@string/input_00"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_0"
                android:background="@drawable/input_button_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_input_7"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_input_0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                android:background="@drawable/input_button_radius"
                android:text="@string/input_0"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_point"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_input_7"
                app:layout_constraintStart_toEndOf="@id/btn_input_00" />

            <Button
                android:id="@+id/btn_input_point"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/black"
                android:text="@string/input_point"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@id/btn_input_equal"
                app:layout_constraintTop_toBottomOf="@id/btn_input_7"
                app:layout_constraintStart_toEndOf="@id/btn_input_0" />

            <Button
                android:id="@+id/btn_input_equal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/input_button_radius"
                android:textColor="@color/teal_200"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/input_equal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_input_7"
                app:layout_constraintStart_toEndOf="@id/btn_input_point" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>