<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <include
            android:id="@+id/nav_bar"
            layout="@layout/nav_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pwd"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pwd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_captcha"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_captcha"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_captcha"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="1" />

                <ImageView
                    android:id="@+id/iv_captcha"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_captcha_refresh"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:text="@string/text_captcha_refresh"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_login"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/text_register"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>